[package]
name = "dungeness"
version = "0.1.0"
authors = ["Melvie Tarr <melvie@motionmetrics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray="0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pancurses = "0.16"
rand = "0.7"